--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,46 @@
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Dependencies
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+dist/
+build/
+.vite/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
 .file_ignore
+
+# Logs
+logs/
+*.log
+
+# Cache
+.cache/
+.parcel-cache/
+.npm/
+.eslintcache
+
+# Temporary files
+*.tmp
+*.temp
+.temp/
+tmp/
+
+# OS
+Thumbs.db
+Desktop.ini
